--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     display: flex;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 .header, .footer{
@@ -30,7 +32,7 @@ a {
     font-weight: 900;
 }
 
-.sub-text{
+.sub-text {
 font-size: 18px;
 color: #e5e7eb;
 }
@@ -39,20 +41,44 @@ button{
     background-color: #3882f6;
     color: #e5e7eb;
     font-weight: bold;
+    max-width:fit-content;
+    border-radius: 7px;
+    border-color: #1f2937;
+    padding: 3px 20px;
+}
+
+.info {
+    text-align: center;
+    margin: 30px;
 }
 
 .cards {
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    gap: 50px;
+    text-align: center;
+    flex-wrap: wrap;
+    margin-bottom: 50px;
 }
 
 .card {   
     border-color: #3882f6;
-    border-width: 12px;
+    border-width: 4px;
     border-style: solid;
     border-radius: 12px;
-    width: 300px;
-    height: 300px;
+    width: 150px;
+    height: 150px;
+    justify-self: center;
+}
+
+.card-container {
+    text-wrap: wrap;
+    width: 200px;
+    
+}
+
+.card-subtext {
+    font-size: 18px;
 }
 
 .quote {
