--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-body {
+html, body {
     display: flex;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 .header, .footer{
@@ -59,6 +60,8 @@ button{
     text-align: center;
     flex-wrap: wrap;
     margin-bottom: 50px;
+    max-height: none;
+    flex: 1;
 }
 
 .card {   
@@ -94,4 +97,9 @@ button{
 
 .god {
     font-weight: bold;
+}
+
+.footer {
+    position: sticky;
+    top: 100vh;
 }
